--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Shopping-app</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="md:hidden"></div>
+    <div class="hidden h-screen w-screen md:block py-80 px-20  text-8xl"><p class="hidden md:block text-red-500">You Can`t use The Bigger Screen !</p></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
