--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <meta name="google-site-verification" content="qEVC22hR0HzU1dHkQdN4TkXY5vX9G4OP1SOkDdI8mVI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easy Shope</title>
   </head>
