--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" type="image/png" href="/logoweb.webp" />
     <meta name="google-site-verification" content="qEVC22hR0HzU1dHkQdN4TkXY5vX9G4OP1SOkDdI8mVI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>Easy Shope</title>
+    <title>Easy-Shope-Mart</title>
   </head>
   <body>
     <div id="root"></div>
